# compiler

./: .editorconfig  .eslintrc.cjs  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitpod.yml  .golangci.yml  .prettierignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SYNTAX_SPEC.md  biome.json  biome.jsonc  go.mod  go.sum  main.go  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.mjs
.changeset/: README.md  afraid-elephants-live.md  afraid-terms-notice.md  angry-donuts-punch.md  angry-knives-sip.md  angry-poems-promise.md  angry-rats-switch.md  beige-adults-wait.md  beige-dogs-compete.md  beige-swans-buy.md  big-crabs-burn.md  big-papayas-breathe.md  blue-deers-beam.md  brave-comics-rush.md  brave-rivers-complain.md  brave-yaks-notice.md  bright-goats-fail.md  bright-lemons-fry.md  bright-panthers-hang.md  bright-pets-reply.md  bright-plums-suffer.md  bright-socks-change.md  brown-mirrors-grin.md  brown-terms-sleep.md  brown-tires-melt.md  brown-windows-fold.md  calm-apricots-help.md  calm-bulldogs-whisper.md  calm-cobras-tie.md  calm-parents-tell.md  calm-scissors-float.md  calm-terms-jump.md  chatty-chefs-swim.md  chatty-masks-check.md  chilled-colts-kick.md  chilled-socks-buy.md  chilled-starfishes-search.md  chilly-beers-help.md  chilly-chairs-enjoy.md  clean-chicken-trade.md  (+398 more)
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: node-volta-debian.sh
.github/ISSUE_TEMPLATE/: ---01-bug-report.yml  config.yml
.github/workflows/: ci.yml  congrats.yml  issue-labeled.yml  issue-needs-repro.yml  lint-changeset.yml  release.yml  snapshot-release.yml
cmd/astro/: astro.go  astro_wasm.go  main.go
cmd/astro-wasm/: astro-wasm.go
crates/astro_codegen/: Cargo.toml
crates/astro_codegen/benches/: codegen.rs
crates/astro_codegen/benches/fixtures/: Favicon.astro  HeaderDropDown.astro  PillLink.astro  SEO.astro  SocialLinks.astro
crates/astro_codegen/src/: css_scoping.rs  diagnostic.rs  lib.rs  options.rs  printer.rs  scanner.rs
crates/astro_codegen/src/printer/: components.rs  elements.rs  escape.rs  expressions.rs  mod.rs  result.rs  slots.rs  sourcemap_builder.rs  sourcemap_tests.rs
crates/astro_codegen/tests/: snapshots.rs
crates/astro_codegen/tests/fixtures/: _955_ternary_slot_with_elements.astro  _955_ternary_slot_with_elements.snap  _955_ternary_slot_with_text.astro  _955_ternary_slot_with_text.snap  advanced_svg_expression.astro  advanced_svg_expression.snap  all_components.astro  all_components.snap  anchor_content.astro  anchor_content.snap  anchor_expressions.astro  anchor_expressions.snap  anchor_inside_expression.astro  anchor_inside_expression.snap  async_arrow_in_expression.astro  async_arrow_in_expression.snap  attribute_with_template_literal.astro  attribute_with_template_literal.snap  attribute_with_template_literal_interpolation.astro  attribute_with_template_literal_interpolation.snap  backtick_in_html_comment.astro  backtick_in_html_comment.snap  basic__frontmatter_.astro  basic__frontmatter_.snap  basic__no_frontmatter_.snap  basic_renderhead.astro  basic_renderhead.snap  caption_only.astro  caption_only.snap  class_and_class_list_object.astro  class_and_class_list_object.snap  class_and_class_list_set.astro  class_and_class_list_set.snap  class_and_class_list_simple_array.astro  class_and_class_list_simple_array.snap  class_list.astro  class_list.snap  class_list_with_spread.astro  class_list_with_spread.snap  class_with_spread.astro  (+571 more)
crates/astro_napi/: CHANGELOG.md  Cargo.toml  astro.wasi-browser.js  astro.wasi.cjs  browser.js  index.d.ts  index.js  package.json
crates/astro_napi/npm/darwin-arm64/: README.md  package.json
crates/astro_napi/npm/darwin-x64/: README.md  package.json
crates/astro_napi/npm/linux-arm64-gnu/: README.md  package.json
crates/astro_napi/npm/linux-arm64-musl/: README.md  package.json
crates/astro_napi/npm/linux-x64-gnu/: README.md  package.json
crates/astro_napi/npm/linux-x64-musl/: README.md  package.json
crates/astro_napi/npm/wasm32-wasi/: README.md  astro.wasi-browser.js  package.json
crates/astro_napi/npm/win32-arm64-msvc/: README.md  package.json
crates/astro_napi/npm/win32-x64-msvc/: README.md  package.json
crates/astro_napi/src/: error.rs  lib.rs
crates/astro_napi/test/: astro.test.ts
docs/: SYNTAX_SPEC.md
internal/: const.go  doc.go  doctype.go  entity.go  escape.go  foreign.go  hash.go  node.go  parser.go  parser_test.go  print-to-source.go  render.go  token.go  token_test.go
internal/handler/: handler.go
internal/helpers/: js_comment_utils.go
internal/js_scanner/: js_scanner.go  js_scanner_test.go  props.go  utils.go
internal/js_scanner/__js_scanner__/: array.snap  basic.snap  invalid_strings.snap  literal.snap  multiple.snap  objects.snap  regexp.snap  shorhand.snap  valid_strings.snap
internal/loc/: diagnostics.go  loc.go
internal/printer/: print-css.go  print-to-js.go  print-to-json.go  print-to-tsx.go  print-to-tsx_test.go  printer.go  printer_css_test.go  printer_test.go  utils.go  utils_test.go
internal/printer/__printer_css__/: scopedStyleStrategy___attribute_.snap  scopedStyleStrategy___class_.snap  styles__no_frontmatter_.snap
internal/printer/__printer_js__/: Component_is_raw.snap  Component_names_A-Z.snap  Component_with_await.snap  Empty_script.snap  Fragment_literal_only.snap  Fragment_shorthand_with_await.snap  (+239 more)
internal/sourcemap/: sourcemap.go
internal/t/: t.go
internal/test_utils/: test_utils.go
internal/transform/: preprocess.go  scope-css.go  scope-css_test.go  scope-html.go  scope-html_test.go  transform.go  transform_test.go  utils.go
internal/ts_parser/: ts_parser.go
internal/wasm_utils/: wasm_utils.go
internal_wasm/utils/: utils.go
lib/compiler/: .gitignore  .npmignore  CHANGELOG.md  README.md  package-lock.json  package.json  test.js  tsconfig.json  types.d.ts
lib/internal/: escape.ts  index.ts
pkg/api/: api.go
repl/: editor.js  index.html  index.js  package-lock.json  package.json  prism-theme.css  shim.js  tabs.js  util.js  wasm_exec.js
ts_parser/: ts_parser.go
(+568 files in other folders)
