[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["Astro contributors"]
edition = "2024"
license = "MIT"
repository = "https://github.com/withastro/compiler"
rust-version = "1.91.0"

[workspace.dependencies]
# Local crates
astro_codegen = { path = "crates/astro_codegen" }

# oxc dependencies via git
# All must come from the same git source to avoid duplicate crate issues.
# Crates with Astro-specific changes: oxc_ast, oxc_ast_visit, oxc_codegen, oxc_parser, oxc_span
# Crates without changes (but must match source): oxc_allocator, oxc_data_structures, oxc_diagnostics, oxc_syntax
oxc_allocator = { git = "https://github.com/withastro/oxc", branch = "feat/astro" }
oxc_ast = { git = "https://github.com/withastro/oxc", branch = "feat/astro" }
oxc_estree = { git = "https://github.com/withastro/oxc", branch = "feat/astro" }
oxc_ast_visit = { git = "https://github.com/withastro/oxc", branch = "feat/astro" }
oxc_codegen = { git = "https://github.com/withastro/oxc", branch = "feat/astro", default-features = false }
oxc_data_structures = { git = "https://github.com/withastro/oxc", branch = "feat/astro" }
oxc_diagnostics = { git = "https://github.com/withastro/oxc", branch = "feat/astro" }
oxc_parser = { git = "https://github.com/withastro/oxc", branch = "feat/astro", features = [
  "regular_expression",
] }
oxc_semantic = { git = "https://github.com/withastro/oxc", branch = "feat/astro" }
oxc_span = { git = "https://github.com/withastro/oxc", branch = "feat/astro" }
oxc_syntax = { git = "https://github.com/withastro/oxc", branch = "feat/astro" }
oxc_transformer = { git = "https://github.com/withastro/oxc", branch = "feat/astro" }
oxc_sourcemap = "6.0.1"

# NAPI
napi = { version = "3", features = ["tokio_rt"] }
napi-build = "2"
napi-derive = "3"

# External
cow-utils = "0.1.3"
lightningcss = { version = "1.0.0-alpha.70", features = ["visitor"], default-features = false }
divan = "0.1"
rustc-hash = "2"
insta = "1.43.2"
mimalloc-safe = "0.1.56"

[profile.dev]
debug = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"
