[package]
name = "astro_codegen"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Astro code generation - transforms Astro AST into JavaScript"

[lints]
workspace = true

[lib]
doctest = true

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_codegen = { workspace = true }
oxc_data_structures = { workspace = true, features = ["code_buffer"] }
oxc_syntax = { workspace = true }

cow-utils = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["glob"] }
oxc_parser = { workspace = true, features = ["astro"] }
oxc_span = { workspace = true }
