[package]
name = "astro_codegen"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Astro code generation - transforms Astro AST into JavaScript"

[lib]
doctest = true

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_codegen = { workspace = true, features = ["sourcemap"] }
oxc_data_structures = { workspace = true, features = ["code_buffer"] }
oxc_parser = { workspace = true, features = ["astro"] }
oxc_semantic = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }
oxc_transformer = { workspace = true }

oxc_sourcemap = { workspace = true }

cow-utils = { workspace = true }
lightningcss = { workspace = true }
rustc-hash = { workspace = true }
smallvec = "1"

[dev-dependencies]
divan = { workspace = true }
insta = { workspace = true, features = ["glob"] }
serde_json = "1"

[[bench]]
name = "codegen"
harness = false
