[package]
name = "astro_napi"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Astro compiler Node.js NAPI binding"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]
test = false
doctest = false

[dependencies]
astro_codegen = { workspace = true }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true, features = ["serialize"] }
oxc_diagnostics = { workspace = true }
oxc_estree = { workspace = true, features = ["serialize"] }
oxc_parser = { workspace = true, features = ["astro"] }
oxc_span = { workspace = true }

napi = { workspace = true }
napi-derive = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
mimalloc-safe = { workspace = true, optional = true, features = ["skip_collect_on_exit"] }

[target.'cfg(all(target_os = "linux", not(target_arch = "arm"), not(target_arch = "aarch64")))'.dependencies]
mimalloc-safe = { workspace = true, optional = true, features = [
  "skip_collect_on_exit",
  "local_dynamic_tls",
] }

[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
mimalloc-safe = { workspace = true, optional = true, features = [
  "skip_collect_on_exit",
  "local_dynamic_tls",
  "no_opt_arch",
] }

[build-dependencies]
napi-build = { workspace = true }

[features]
default = []
allocator = ["dep:mimalloc-safe"]
